# finance_bot

./: .gitignore  Makefile  config.py  create_tables.py  main.py  pyproject.toml
bot/database/: base.py  models.py  repository.py
bot/handlers/: __init__.py  budgets.py  common.py  finance.py  reports.py  settings.py  visualization.py
bot/keyboards/: reply.py  settings.py
bot/middlewares/: database.py
bot/utils/: reminders.py  reports.py  states.py  visualization.py
docker/: docker-compose.yml
docs/: table.example1  table.example2
