[tool.poetry]
name = "finance-bot"
version = "0.1.0"
description = ""
authors = ["VasiliySilver <svaaugust@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
commitizen = "^4.0.0"
ruff = "^0.8.1"
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
