[tool.poetry]
name = "finance-bot"
version = "0.1.0"
description = ""
authors = ["VasiliySilver <svaaugust@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.8.1"
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"
sqlalchemy = "^1.4"
matplotlib = "^3.4"
xlsxwriter = "^1.4"
environs = "^11.2.1"
asyncpg = "^0.30.0"
numpy = "^2.1.3"
pandas = "^2.2.3"
aiogram = "^3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
